# agentkit

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: book.yml  pr-checks.yml
benchmarks/compose-bench/: Cargo.toml  README.md
benchmarks/compose-bench/results/2026-06-10-multi-model/: cross-model-report.md
benchmarks/compose-bench/scripts/: cross_model_report.py
benchmarks/compose-bench/src/: harness.rs  main.rs  metrics.rs  scenario.rs
benchmarks/compose-bench/src/scenarios/: calendar_scheduling.rs  config_migration.rs  crm_hygiene.rs  log_incident.rs  mod.rs  revenue_report.rs  support_triage.rs
book/: book.toml
book/src/: SUMMARY.md  acp.md  architecture.md  ch00-how-do-llms-work.md  ch01-model-adapter.md  ch02-what-is-an-agent-loop.md  ch03-transcript-model.md  ch04-streaming-and-deltas.md  ch05-model-adapter.md  ch06-driving-the-loop.md  ch07-interrupts-and-control-flow.md  ch08-capability-layer.md  ch09-tool-system.md  ch10-permissions.md  ch11-filesystem-tools.md  ch12-shell-execution.md  ch13-custom-tools.md  ch14-context-loading.md  ch15-caching.md  ch15-compaction.md  ch16-compaction.md  ch17-mcp.md  ch18-reporting.md  ch18-task-management.md  ch19-provider-adapters.md  ch19-reporting.md  ch20-coding-agent-architecture.md  ch20-provider-adapters.md  ch21-coding-agent-architecture.md  ch22-interactive-cli.md  ch22-putting-it-together.md  ch23-putting-it-together.md  compaction.md  context.md  crates.md  examples.md  feature-flags.md  installation.md  introduction.md  mcp.md  (+6 more)
book/theme/: custom.css  index.hbs
crates/agentkit/: Cargo.toml  README.md
crates/agentkit-acp/: Cargo.toml  README.md
crates/agentkit-acp/src/: lib.rs
crates/agentkit-adapter-completions/: Cargo.toml  README.md
crates/agentkit-capabilities/: Cargo.toml  README.md
crates/agentkit-capabilities/src/: lib.rs
crates/agentkit-compaction/: Cargo.toml  README.md
crates/agentkit-compaction/src/: lib.rs
crates/agentkit-context/: Cargo.toml  README.md
crates/agentkit-context/src/: lib.rs
crates/agentkit-core/: Cargo.toml  README.md
crates/agentkit-core/src/: lib.rs
crates/agentkit-http/: Cargo.toml  README.md
crates/agentkit-http/src/: client.rs  error.rs  lib.rs  request.rs  reqwest_impl.rs  reqwest_middleware_impl.rs  response.rs
crates/agentkit-integration-tests/: Cargo.toml
crates/agentkit-loop/: Cargo.toml  README.md
crates/agentkit-loop/src/: lib.rs
crates/agentkit-mcp/: Cargo.toml  README.md
crates/agentkit-mcp/src/: lib.rs
crates/agentkit-mcp/tests/: dynamic_http_client.rs  in_memory.rs
crates/agentkit-provider-anthropic/: Cargo.toml  README.md
crates/agentkit-provider-cerebras/: Cargo.toml  README.md
crates/agentkit-provider-groq/: Cargo.toml  README.md
crates/agentkit-provider-mistral/: Cargo.toml  README.md
crates/agentkit-provider-ollama/: Cargo.toml  README.md
crates/agentkit-provider-openai/: Cargo.toml  README.md
crates/agentkit-provider-openrouter/: Cargo.toml  README.md
crates/agentkit-provider-openrouter/src/: lib.rs
crates/agentkit-provider-vllm/: Cargo.toml  README.md
crates/agentkit-provider-vllm/src/: lib.rs
crates/agentkit-reporting/: Cargo.toml  README.md
crates/agentkit-reporting/src/: buffered.rs  channel.rs  lib.rs  policy.rs  tracing_reporter.rs
crates/agentkit-task-manager/: Cargo.toml  README.md
crates/agentkit-tool-compose/: Cargo.toml  README.md
crates/agentkit-tool-fs/: Cargo.toml  README.md
crates/agentkit-tool-fs/src/: lib.rs
crates/agentkit-tool-shell/: Cargo.toml  README.md
crates/agentkit-tool-shell/src/: lib.rs
crates/agentkit-tool-skills/: Cargo.toml  README.md
crates/agentkit-tools-core/: Cargo.toml  README.md
crates/agentkit-tools-core/src/: lib.rs
crates/agentkit-tools-derive/: Cargo.toml  README.md
crates/agentkit-tools-derive/src/: lib.rs
crates/agentkit-tools-derive/tests/: macro_integration.rs
crates/agentkit/src/: lib.rs
docs/: README.md  acp.md  architecture.md  capabilities.md  cerebras-provider-plan.md  compaction.md  compose-case-study.md  context.md  core.md  feature-flags.md  getting-started.md  loop.md  mcp.md  oauth-2.1.md  parallel-and-background-tools.md  permissions.md  reporting.md  tools.md  v1-boundary.md  v1-plan.md
examples/anthropic-chat/: Cargo.toml
examples/anthropic-chat/src/: main.rs
examples/cerebras-batch/: Cargo.toml
examples/cerebras-batch/src/: main.rs
examples/cerebras-chat/: Cargo.toml
examples/cerebras-chat/src/: main.rs
examples/mcp-dynamic-auth/: Cargo.toml
examples/mcp-dynamic-auth/src/: lib.rs  main.rs
examples/mcp-reference-interop/: Cargo.toml  README.md
examples/mcp-reference-interop/src/: lib.rs  main.rs
examples/mcp-reference-interop/tests/: live.rs
examples/openrouter-acp-trio/: Cargo.toml  README.md
examples/openrouter-acp-trio/src/: main.rs
examples/openrouter-agent-cli/: Cargo.toml  README.md
examples/openrouter-agent-cli/src/: main.rs
examples/openrouter-chat/: Cargo.toml  README.md
examples/openrouter-chat/src/: main.rs
examples/openrouter-codemod/: Cargo.toml  README.md
examples/openrouter-coding-agent/: Cargo.toml  README.md
examples/openrouter-coding-agent/src/: main.rs
examples/openrouter-compaction-agent/: Cargo.toml  README.md
examples/openrouter-compaction-agent/src/: lib.rs  main.rs
examples/openrouter-context-agent/: Cargo.toml  README.md
examples/openrouter-context-agent/fixtures/project/: AGENTS.md
examples/openrouter-context-agent/fixtures/project/skills/deploy-checks/: SKILL.md
examples/openrouter-context-agent/fixtures/project/skills/release-notes/: SKILL.md
examples/openrouter-context-agent/src/: main.rs
examples/openrouter-context-window-compaction/: Cargo.toml  README.md
examples/openrouter-context-window-compaction/src/: example_compaction_prompt.md  main.rs  story.txt
examples/openrouter-macro-tool/: Cargo.toml
examples/openrouter-mcp-tool/: Cargo.toml  README.md
examples/openrouter-parallel-agent/: Cargo.toml  README.md
examples/openrouter-subagent-tool/: Cargo.toml  (+1 more)
scripts/: publish-crates.sh
(+91 files in other folders)
