[workspace]
members = [
    "crates/agentkit-core",
    "crates/agentkit-context",
    "crates/agentkit-capabilities",
    "crates/agentkit-tools-core",
    "crates/agentkit-loop",
    "crates/agentkit",
    "crates/agentkit-provider-openrouter",
    "crates/agentkit-reporting",
    "crates/agentkit-tool-fs",
    "crates/agentkit-tool-shell",
    "crates/agentkit-mcp",
    "examples/openrouter-chat",
    "examples/openrouter-coding-agent",
    "examples/openrouter-context-agent",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
