[package]
name = "compose-bench"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-tool-compose = { path = "../../crates/agentkit-tool-compose" }
agentkit-tool-fs = { path = "../../crates/agentkit-tool-fs" }
agentkit-tool-shell = { path = "../../crates/agentkit-tool-shell" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
async-trait.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "fs"] }
