[package]
name = "agentkit-context"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-core = { path = "../agentkit-core" }
async-fs = "2.2.0"
async-trait.workspace = true
futures-lite = "2.6.1"
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
