[package]
description = "Core transcript, content, usage, and cancellation primitives for agentkit."
homepage.workspace = true
name = "agentkit-core"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
futures-timer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
