[package]
description = "Model Context Protocol integration for agentkit, including transports, auth, and adapters."
homepage.workspace = true
name = "agentkit-mcp"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-capabilities = { version = "0.1.0", path = "../agentkit-capabilities" }
agentkit-core = { version = "0.1.0", path = "../agentkit-core" }
agentkit-tools-core = { version = "0.1.0", path = "../agentkit-tools-core" }
async-trait.workspace = true
futures-util = "0.3.31"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process", "sync"] }
tokio-util = { version = "0.7.16", features = ["io"] }
