[package]
description = "Model Context Protocol integration for agentkit, including transports, auth, and adapters."
homepage.workspace = true
name = "agentkit-mcp"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["reqwest-client"]
reqwest-client = ["agentkit-http/reqwest-client", "dep:reqwest"]

[dependencies]
agentkit-capabilities = { version = "0.3.0", path = "../agentkit-capabilities" }
agentkit-core = { version = "0.3.0", path = "../agentkit-core" }
agentkit-http = { version = "0.3.0", path = "../agentkit-http", default-features = false }
agentkit-tools-core = { version = "0.3.0", path = "../agentkit-tools-core" }
async-trait.workspace = true
futures-util = "0.3.31"
url = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["io"] }
reqwest = { workspace = true, optional = true }
