[package]
name = "agentkit-provider-openrouter"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { path = "../agentkit-core" }
agentkit-loop = { path = "../agentkit-loop" }
agentkit-tools-core = { path = "../agentkit-tools-core" }
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
