[package]
name = "agentkit-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-core = { path = "../agentkit-core" }
agentkit-loop = { path = "../agentkit-loop" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
