[package]
name = "agentkit-tools-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-capabilities = { path = "../agentkit-capabilities" }
agentkit-core = { path = "../agentkit-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
