[package]
description = "Tool traits, registry, execution, permissions, approvals, and auth for agentkit."
homepage.workspace = true
name = "agentkit-tools-core"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-capabilities = { version = "0.3.1", path = "../agentkit-capabilities" }
agentkit-core = { version = "0.3.1", path = "../agentkit-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
