[package]
description = "Procedural macro derives for agentkit tools (the #[tool] attribute)."
homepage.workspace = true
name = "agentkit-tools-derive"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
agentkit-core = { path = "../agentkit-core" }
agentkit-tools-core = { path = "../agentkit-tools-core", features = ["schemars"] }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true }
