[package]
name = "agentkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-capabilities = { path = "../agentkit-capabilities", optional = true }
agentkit-core = { path = "../agentkit-core", optional = true }
agentkit-loop = { path = "../agentkit-loop", optional = true }
agentkit-mcp = { path = "../agentkit-mcp", optional = true }
agentkit-provider-openrouter = { path = "../agentkit-provider-openrouter", optional = true }
agentkit-reporting = { path = "../agentkit-reporting", optional = true }
agentkit-tool-fs = { path = "../agentkit-tool-fs", optional = true }
agentkit-tool-shell = { path = "../agentkit-tool-shell", optional = true }
agentkit-tools-core = { path = "../agentkit-tools-core", optional = true }

[features]
default = ["core", "capabilities", "tools", "loop", "reporting"]
core = ["dep:agentkit-core"]
capabilities = ["dep:agentkit-capabilities", "core"]
tools = ["dep:agentkit-tools-core", "capabilities"]
loop = ["dep:agentkit-loop", "tools"]
mcp = ["dep:agentkit-mcp", "capabilities", "tools"]
provider-openrouter = ["dep:agentkit-provider-openrouter", "loop"]
reporting = ["dep:agentkit-reporting", "loop"]
tool-fs = ["dep:agentkit-tool-fs", "tools"]
tool-shell = ["dep:agentkit-tool-shell", "tools"]
