[package]
description = "Feature-gated umbrella crate for building agent applications with agentkit."
homepage.workspace = true
name = "agentkit"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-capabilities = { version = "0.1.0", path = "../agentkit-capabilities", optional = true }
agentkit-compaction = { version = "0.1.0", path = "../agentkit-compaction", optional = true }
agentkit-context = { version = "0.1.0", path = "../agentkit-context", optional = true }
agentkit-core = { version = "0.1.0", path = "../agentkit-core", optional = true }
agentkit-loop = { version = "0.1.0", path = "../agentkit-loop", optional = true }
agentkit-mcp = { version = "0.1.0", path = "../agentkit-mcp", optional = true }
agentkit-provider-openrouter = { version = "0.1.0", path = "../agentkit-provider-openrouter", optional = true }
agentkit-reporting = { version = "0.1.0", path = "../agentkit-reporting", optional = true }
agentkit-tool-fs = { version = "0.1.0", path = "../agentkit-tool-fs", optional = true }
agentkit-tool-shell = { version = "0.1.0", path = "../agentkit-tool-shell", optional = true }
agentkit-tool-skills = { version = "0.1.0", path = "../agentkit-tool-skills", optional = true }
agentkit-tools-core = { version = "0.1.0", path = "../agentkit-tools-core", optional = true }

[features]
default = ["core", "capabilities", "tools", "loop", "reporting"]
core = ["dep:agentkit-core"]
compaction = ["dep:agentkit-compaction", "core"]
capabilities = ["dep:agentkit-capabilities", "core"]
context = ["dep:agentkit-context", "core"]
tools = ["dep:agentkit-tools-core", "capabilities"]
loop = ["dep:agentkit-loop", "tools"]
mcp = ["dep:agentkit-mcp", "capabilities", "tools"]
provider-openrouter = ["dep:agentkit-provider-openrouter", "loop"]
reporting = ["dep:agentkit-reporting", "loop"]
tool-fs = ["dep:agentkit-tool-fs", "tools"]
tool-shell = ["dep:agentkit-tool-shell", "tools"]
tool-skills = ["dep:agentkit-tool-skills", "tools"]
