[package]
name = "cerebras-chat"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
agentkit-provider-cerebras = { path = "../../crates/agentkit-provider-cerebras", features = ["compression", "predicted-outputs", "service-tiers"] }
async-trait.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["signal", "io-std", "io-util", "sync"] }
