[package]
name = "mcp-dynamic-auth"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-http = { path = "../../crates/agentkit-http", features = ["reqwest-middleware-client"] }
agentkit-mcp = { path = "../../crates/agentkit-mcp" }
async-trait.workspace = true
axum = "0.8.4"
http = "1"
reqwest.workspace = true
reqwest-middleware = "0.5"
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net", "rt-multi-thread", "macros"] }
