[package]
name = "mcp-dynamic-auth"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-mcp = { path = "../../crates/agentkit-mcp" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
axum = "0.8.4"
http = "1"
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net", "rt-multi-thread", "macros"] }
