[package]
name = "mcp-dynamic-auth"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "mcp-dynamic-auth"
path = "src/main.rs"

[dependencies]
agentkit-mcp = { path = "../../crates/agentkit-mcp" }
async-trait.workspace = true
axum = "0.8.4"
reqwest.workspace = true
rmcp = { version = "1.5.0", default-features = false, features = ["client", "transport-streamable-http-client-reqwest", "reqwest"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net", "rt-multi-thread", "macros"] }
