[package]
name = "mcp-reference-interop"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-mcp = { path = "../../crates/agentkit-mcp" }
axum = "0.8.4"
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0.4"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "net", "time", "rt-multi-thread", "macros"] }
tokio-util = "0.7.16"
