[package]
name = "openrouter-acp-trio"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agent-client-protocol = "1.0.1"
agentkit-acp = { path = "../../crates/agentkit-acp" }
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-tool-fs = { path = "../../crates/agentkit-tool-fs" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
async-trait.workspace = true
dotenvy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "sync", "time"] }
