[package]
name = "openrouter-agent-cli"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-compaction = { path = "../../crates/agentkit-compaction" }
agentkit-context = { path = "../../crates/agentkit-context" }
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-mcp = { path = "../../crates/agentkit-mcp" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-reporting = { path = "../../crates/agentkit-reporting" }
agentkit-tool-fs = { path = "../../crates/agentkit-tool-fs" }
agentkit-tool-shell = { path = "../../crates/agentkit-tool-shell" }
agentkit-tool-skills = { path = "../../crates/agentkit-tool-skills" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
async-trait.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }
