[package]
name = "openrouter-chat"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
dotenvy.workspace = true
tokio.workspace = true
