[package]
name = "openrouter-coding-agent"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-compaction = { path = "../../crates/agentkit-compaction" }
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-tool-fs = { path = "../../crates/agentkit-tool-fs" }
agentkit-tool-shell = { path = "../../crates/agentkit-tool-shell" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
async-trait.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "signal", "sync", "macros", "rt-multi-thread"] }
