[package]
name = "openrouter-compaction-agent"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-compaction = { path = "../../crates/agentkit-compaction" }
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-reporting = { path = "../../crates/agentkit-reporting" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
async-trait.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tokio.workspace = true
