[package]
name = "openrouter-context-agent"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-context = { path = "../../crates/agentkit-context" }
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-reporting = { path = "../../crates/agentkit-reporting" }
agentkit-tool-skills = { path = "../../crates/agentkit-tool-skills" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
dotenvy.workspace = true
tokio.workspace = true
