[package]
name = "openrouter-context-window-compaction"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-compaction = { path = "../../crates/agentkit-compaction" }
agentkit-core = { path = "../../crates/agentkit-core" }
agentkit-http = { path = "../../crates/agentkit-http" }
agentkit-loop = { path = "../../crates/agentkit-loop" }
agentkit-provider-openrouter = { path = "../../crates/agentkit-provider-openrouter" }
agentkit-tools-core = { path = "../../crates/agentkit-tools-core" }
async-trait.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
